--- a/App/css/app.css
+++ b/App/css/app.css
@@ -3,11 +3,11 @@
 }
 .container{
   margin: auto;
-  max-width: 800px;
+  max-width: 600px;
 }
 .content-split{
   display: block;
-  max-width: 400px;
+  max-width: 250px;
   width: 50%;
 }
 ._right{
@@ -23,4 +23,7 @@
 }
 .align_right{
   text-align: right;
+}
+.clearfix{
+  clear: both;
 }
